2010-03-23  Qi Zhang  <qi.2.zhang@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt]  fast/canvas/patternfill-repeat.html failed.
        https://bugs.webkit.org/show_bug.cgi?id=34477

        Change Pattern to expose the repeatX and repeatY
        at GraphicsContextQt to apply repeatX and repeatY

        * platform/graphics/Pattern.h:
        (WebCore::Pattern::repeatX):
        (WebCore::Pattern::repeatY):
        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::drawLine):
        (WebCore::GraphicsContext::fillRect):
        (WebCore::GraphicsContext::rotate):

2010-03-23  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt]  fast/canvas/patternfill-repeat.html failed.
        https://bugs.webkit.org/show_bug.cgi?id=34477

        Enable LayoutTests/fast/canvas/patternfill-repeat.html.

        * platform/qt/Skipped:
        * platform/qt/fast/canvas/patternfill-repeat-expected.checksum: Added.
        * platform/qt/fast/canvas/patternfill-repeat-expected.png: Added.
        * platform/qt/fast/canvas/patternfill-repeat-expected.txt:



Canonical link: https://commits.webkit.org/47685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56391 268f45cc-cd09-0410-ab3c-d52691b4dbfc